# CodeGen

./: CMakeLists.txt  GenClient.cpp  GenService.cpp  Printer.hpp  utils.hpp
template/genclient/: CMakeLists.txt  PaxosKVServiceClient.cpp  PaxosKVServiceClient.hpp
