CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Codegen)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)


LINK_LIBRARIES(dl pthread protobuf gpr grpc++ grpc++_reflection)

SET(APP_SOURCES_SERVICE "./GenService.cpp")
SET(APP_SOURCES_CLIENT "./GenClient.cpp")
ADD_EXECUTABLE(GenService ${APP_SOURCES_SERVICE})
ADD_EXECUTABLE(GenClient ${APP_SOURCES_CLIENT})
INSTALL(TARGETS GenService RUNTIME DESTINATION bin)
INSTALL(TARGETS GenClient RUNTIME DESTINATION bin)